# talk-with-pdfs-rag

./: .dockerignore  .env.example  .gitignore  .ingestion_dedupe.sqlite  .ingestion_dedupe_qidx.sqlite  .ingestion_dedupe_test_idx.sqlite  .pre-commit-config.yaml  DOCKER.md  Dockerfile  README.md  docker-start.sh  kubernetes.md  pyproject.toml  run_api.sh  run_app.sh  run_rag_experiments.py.backup  test_bibliography_removal.py  test_retriever_settings.py
.github/: copilot-instructions.md
app/: main.py  start_app.py
app/core/: __init__.py  citations.py  config.py  embeddings.py  generator.py  hashing.py  ingestion.py  logging.py  metadata_extraction.py  models.py  preprocessing.py  prompting.py  query_expansion.py  rag_pipeline.py  reranker.py  retrieval_utils.py  retriever.py  splitting.py  structured_splitter.py  vectorstore.py
app/interfaces/: cli.py  streamlit_app.py  streamlit_app.py.corrupted
app/tests/: test_accurate_token_count.py  test_deterministic_chunk_ids.py  test_eval_map.py  test_eval_mrr.py  test_ingestion_split_retrieve.py  test_keyword_retriever.py  test_metadata_extraction.py  test_query_log_enrichment.py  test_structured_section_levels.py
core/: ingestion_queue.py
data/: .gitkeep
docs/: cleanup_plan.md  refactor_plan.md
experiments/: README.md  legacy_retriever_test.py  run_rag_matrix.py
experiments/eval/: gold_examples.jsonl  run_eval.py
experiments/eval/results/: eval_test_fake.json  eval_vector_k2_20250828-170635.json  eval_vector_k2_20250828-170701.json  eval_vector_k2_20250828-170737.json  eval_vector_k2_20250828-170829.json  eval_vector_k2_20250828-180122.json  eval_vector_k2_20250828-180327.json  eval_vector_k2_20250828-180736.json
experiments/rag_eval_20250826-151904/vectorstores/exp_01_sim_small_chunks_k5/: chroma.sqlite3
experiments/rag_eval_20250826-152407/vectorstores/exp_01_sim_small_chunks_k5/: chroma.sqlite3
experiments/rag_eval_20250826-152724/vectorstores/exp_01_sim_small_chunks_k5/: chroma.sqlite3
interfaces/: api.py  metrics.py  pipeline_adapter.py  rate_limiter.py
logs/: query_log.jsonl
tests/: test_adaptive_k.py  test_adaptive_k_rerank_integration.py  test_api_async_answer.py  test_api_endpoints.py  test_api_eval.py  test_api_eval_status.py  test_api_health.py  test_api_injection.py  test_api_instrumentation.py  test_api_metrics.py  test_api_metrics_endpoint.py  test_chunk_token_invariant.py  test_config.py  test_hash_and_ingestion.py  test_heading_false_positive_versions.py  test_index_version_mismatch.py  test_ingestion_backend_integration.py  test_ingestion_dedup.py  test_ingestion_queue.py  test_ingestion_queue_async.py  test_ingestion_to_backend.py  test_list_sources.py  test_metadata_year_fallback.py  test_preprocessing.py  test_query_expansion.py  test_query_log_expansion_logging.py  test_reranking_retriever.py  test_retrieval_kwargs.py  test_sources_disk_listing.py  test_structured_splitter.py  test_vectorstore_ingestion_queue.py  test_vectorstore_persists_sources.py
vector_backends/: __init__.py  base.py  chroma_backend.py
(+1 files in other folders)
